@@ -32,5 +32,6 @@ void loader_frame( libspectrum_dword frame_length );
 void loader_tape_play( void );
 void loader_tape_stop( void );
 void loader_detect_loader( void );
+void loader_set_acceleration_flags( int flags );
 
 #endif			/* #ifndef FUSE_LOADER_H */
